# xview3-SAR-satellite-imagery

./: .dockerignore  .gitignore  Config  README.md  notebook-xview3-blog-walkthrough.ipynb  requirements.txt  requirements_cpu.txt  requirements_gpu.txt  setup.cfg
configs/xview3/: Base-RCNN-FPN-xView3.yaml  frcnn_R101_FPN_full.yaml  frcnn_R101_FPN_full_VH3.yaml  frcnn_X101_32x8d_FPN_full.yaml  frcnn_X101_32x8d_FPN_full_VH3.yaml
docker/processing/: base.Dockerfile  main.Dockerfile
docker/training/: base.Dockerfile  main.Dockerfile
scripts/: split_download_file.sh
src/: setup.py
src/xview3_d2/: __init__.py  utils.py
src/xview3_d2/config/: xview3.py
src/xview3_d2/data/: xview3_build.py  xview3_dataset_mapper.py
src/xview3_d2/data/datasets/: xview3.py
src/xview3_d2/data/sampler/: sampler.py
src/xview3_d2/data/transforms/: __init__.py  augmentation.py
src/xview3_d2/engine/: defaults.py  hooks.py
src/xview3_d2/evaluation/: metric.py  xview3_eval.py
src/xview3_d2/modeling/roi_heads/: xview_custom_fast_rcnn.py  xview_custom_roi_heads.py
tools/: chip_scenes_from_annotations.py  create_data_split.py  create_xview3_dataset_dict.py  docker_utils.py  download_scenes.py  predict_xview3.py  store_xview3_imagery.py  train_net.py
