[metadata]
name = xview3_d2
description = Build a scalable machine learning pipeline using Amazon SageMaker to train and deploy an object detection model for gigapixel-scale satellite imagery 
author = Kachi Odoemene
author_email = kachio@amazon.com
license = Apache 2.0
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/aws-samples/amazon-sagemaker-gigapixel-satellite-imagery-detectron2

project_urls =
#    Blog = aws.blogs
    Source = https://github.com/aws-samples/amazon-sagemaker-gigapixel-satellite-imagery-detectron2
    Tracker = https://github.com/aws-samples/amazon-sagemaker-gigapixel-satellite-imagery-detectron2/issues

platforms = any

classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

python_requires = >=3.8

install_requires =
    torch>=1.10.1
    torchvision>=0.11.2
    rasterio
    pycocotools~=2.0.0

[options.packages.find]
where = src

[options.extras_require]
detectron2 = detectron2 @ git+https://github.com/facebookresearch/detectron2.git

# Add here test requirements (semicolon/line-separated)
testing =
    setuptools
    pytest
    pytest-cov


[tool:pytest]
addopts =
    --cov xview3_d2 --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 120
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py
